PEAK-33 - Auth Invisible Content - fix Overflow + Renaming signal variables

--- a/Application/Source/PeakPerformance.Client/Workspace/src/app/pages/auth/auth.component.scss
+++ b/Application/Source/PeakPerformance.Client/Workspace/src/app/pages/auth/auth.component.scss
@@ -2,7 +2,8 @@
 
 main.auth {
   position: relative;
-  width: 100dvw;
+  @include size(100dvw, 100dvh);
+  overflow: hidden;
 
   section.auth-forms-holder {
     @include size(40%, 100dvh);
